app/assets/stylesheets/devise.scss
/* ************************************
DEVISE STYLES
************************************ */

$gh-yellow: #ffde00;
$gh-green: #367c2b;

.gh-devise-page-title {
  font-size: 4em;
  color: $gh-yellow;
}

@import url(https://fonts.googleapis.com/css?family=Roboto:300);

.login-page {
  width: 360px;
  padding: 8% 0 0;
  margin: auto;
}
.form {
  border-radius: 10px;
  background: #FFFFFF;
  max-width: 360px;
  margin: 8% auto 100px;
  padding: 35px 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);

  h4 {
    color: $gh-green;
    margin-bottom: 1rem;
    font-size: 1.5625rem;
  }
  .request-h4 {
    margin-bottom: 5px;
  }
  .edit_gardener #gardener_password {
    margin: 0 0 5px;
  }
  .edit_gardener #gardener_current_password {
    margin: 15px 0 0;
  }
  .edit_gardener #gardener_password_confirmation {
    margin: 0;
  }
}
.form .remember-me {
  text-align: left;
  #gardener_remember_me {
    width: 12px;
  }
}
.form input {
  font-family: "Roboto", sans-serif;
  outline: 0;
  background: #f2f2f2;
  width: 100%;
  border: 0;
  margin: 0 0 15px;
  padding: 15px;
  box-sizing: border-box;
  font-size: 14px;
}
.form label {
  text-align: left;
  padding: 5px 0 0 15px;
  color: #A9A9A9;
}
.form #tool_image {
  margin: 0;
  padding: 5px 15px 10px;
  background: none;
}
.image-upload-wrap {
  background: #f2f2f2;
  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
}
.form .progress {
  margin: 2px 0 15px;
}
.form .button {
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  outline: 0;
  background: #4CAF50;
  width: 100%;
  border: 0;
  margin: 0 0 .5rem 0;
  padding: 15px;
  color: #FFFFFF;
  font-size: 14px;
  -webkit-transition: all 0.3 ease;
  transition: all 0.3 ease;
  cursor: pointer;
}
.form .cancel-account {
  color: #ec5840;
}
.form .button.alert {
  background-color: #ec5840;
  margin: 0 0 15px;
}
.form .button.alert:hover, .form .button.alert:active, .form .button.alert:focus {
  background-color: red;
}
.form .button:hover,.form .button:active,.form .button:focus {
  background: #43A047;
}
.form .message {
  margin: 15px 0 0;
  color: #b3b3b3;
  font-size: 12px;
  display: inline;
}
.edit_gardener .message {
  display: inline-block;
  margin: 0;
}
.form .message a {
  color: #4CAF50;
  text-decoration: none;
}
.form .update-gardener-submit {
  margin: 10px 0 0;
}
.form-toggle:hover {
  color: #4CAF50;
}
.form .gardener-register {
  display: none;
}
.form .gardener-login #gardener_password {
  margin: 0;
}

.form .cancel-account {
  margin: 10px 0 5px;
}

#error_explanation > h2 {
  font-size: 25px;
  display: none;
}

#error_explanation > ul {
  margin: 0 0 15px;
}

#error_explanation > ul > li {
  font-size: 16px;
  list-style: none;
}

